--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,38 @@
-# Arquivo requirements.txt
-# Dependências necessárias para rodar o treinador_edr_completo_final.py
+# EDR ULTRA v4.0 - Dependências de Produção
+# Python 3.9+ recomendado
 
-# Dependências essenciais de Data Science e Machine Learning
-pandas
-numpy
-scikit-learn
-joblib
+# Core Data Science
+pandas>=2.0.0
+numpy>=1.24.0
 
-# Dependências para a integração de Inteligência de Ameaças (MITRE ATT&CK)
-pyattck
-mitreattack-python
+# Machine Learning
+scikit-learn>=1.3.0
+joblib>=1.3.0
 
-#requests
-requests
+# Deep Learning (Neural Networks)
+# Incluído no scikit-learn via MLPClassifier
+
+# Inteligência de Ameaças MITRE
+# O sistema faz parsing direto do JSON STIX
+
+# HTTP Requests
+requests>=2.31.0
+
+# Opcional: Visualização e Análise Avançada
+# Descomente se quiser recursos extras
+
+# matplotlib>=3.7.0          # Para gráficos
+# seaborn>=0.12.0            # Para visualizações estatísticas
+# plotly>=5.14.0             # Para dashboards interativos
+# flask>=2.3.0               # Para criar API REST
+# fastapi>=0.100.0           # Alternativa moderna para API
+# uvicorn>=0.23.0            # Servidor ASGI para FastAPI
+
+# Opcional: Análise de Logs e SIEM
+# python-logstash>=0.4.8     # Integração com Logstash
+# elasticsearch>=8.0.0       # Para integração com ELK
+# pymongo>=4.3.0             # Para armazenar em MongoDB
+
+# Opcional: Notificações
+# slack-sdk>=3.21.0          # Alertas via Slack
+# python-telegram-bot>=20.0  # Alertas via Telegram
